Cambios a la vista de produccion en el bloque de insumos

--- a/templatedjango/apptemplate/templates/insumos/insumos.html
+++ b/templatedjango/apptemplate/templates/insumos/insumos.html
@@ -187,7 +187,7 @@
                                                 <select class="form-control" name="medida" id="recipient-name">
                                                     <!-- <option disabled selected>Medida</option> -->
                                                     <option class="categoria_medida{{insumo.id}}" value="unidades">
-                                                        unidades</option>
+                                                        uds.</option>
                                                     <option class="categoria_medida{{insumo.id}}" value="kg">kg</option>
                                                 </select>
                                                 <script type="text/javascript">
