--- a/templatedjango/apptemplate/templates/productos/productos.html
+++ b/templatedjango/apptemplate/templates/productos/productos.html
@@ -15,7 +15,7 @@
 
                     <h5 class="card-title">¡Productos!</h5>
 
-                    <form action="productos" method="POST" id="form_id" enctype="multipart/form-data">
+                    <form action="productos" method="POST" id="id_form" enctype="multipart/form-data">
 
                         {% csrf_token %}
 
