--- a/templatedjango/apptemplate/templates/produccion/produccion.html
+++ b/templatedjango/apptemplate/templates/produccion/produccion.html
@@ -117,9 +117,9 @@
                             {% for producto in productos  %}
 
                             <tr class="tabla_compras">
-                                <td class="small" id="producto{{producto.id_produccion}}">{{producto.categoria}}</td>
-                                <td class="small" id="nombre_producto{{producto.id_produccion}}">{{producto.nombre}}</td>
-                                <td class="small">{{producto.cantidad}}</td>
+                                <td class="small" id="producto{{producto.id_produccion}}">{{producto.id_producto.id_nombre_producto.categoria}}</td>
+                                <td class="small" id="nombre_producto{{producto.id_produccion}}">{{producto.id_producto.id_nombre_producto.nombre_productos}}</td>
+                                <td class="small">{{producto.cantidad_detalle}}</td>
 
 
 
@@ -238,13 +238,13 @@
 
                                     <!-- Button trigger modal -->
                                     <i style="color: white; padding:0 10px ;" type="button" data-toggle="modal"
-                                        data-target="#borrar{{producto.id_produccion}}">
+                                        data-target="#borrar{{producto.id}}">
                                         {% load static %}
                                         <img src="{% static '/assets/icons/circle-remove.svg' %}" alt="">
                                     </i>
 
                                     <!-- Modal -->
-                                    <div class="modal fade" id="borrar{{producto.id_produccion}}" tabindex="-1"
+                                    <div class="modal fade" id="borrar{{producto.id}}" tabindex="-1"
                                         role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                         <div class="modal-dialog" role="document">
                                             <div class="modal-content">
@@ -259,7 +259,7 @@
                                                     {% csrf_token %}
                                                     <div class="modal-body">
                                                         <input type="hidden" name="id_borrar"
-                                                            value="{{producto.id_produccion}}">
+                                                            value="{{producto.id}}">
                                                         <input type="hidden" name="borrar" value="borrar">
                                                         Desea Eliminar este Registro ?
                                                     </div>
