--- a/templatedjango/apptemplate/templates/base/template.html
+++ b/templatedjango/apptemplate/templates/base/template.html
@@ -34,6 +34,8 @@
     
     <script src="{% static '/js/functions_table.js' %}"></script>
     <!-- HACEMOS REFERENCIA AL SCRIPT PARA EL HIDE Y SHOW -->
+
+    <link rel="icon" type="image/svg" href="/static/assets/icons/Path_406.svg"/>
     
   </head>
   
@@ -107,6 +109,11 @@
           <i class="fa fa-bars mr-2"> {% load static %} <img src="{% static '/assets/icons/Path_461.svg' %}">
           </i><small class="text-uppercase font-weight-bold" style="color: #A3A6B4;">Pedidos</small>
         </a>
+
+        <a href="clientes" class="list-group-item list-group-item-action bg-light">
+          <i class="fa fa-bars mr-2"> {% load static %} <img src="{% static '/assets/icons/Layer2.svg' %}">
+          </i><small class="text-uppercase font-weight-bold" style="color: #A3A6B4;">Clientes</small>
+        </a>
         
       </div>
     </div>
@@ -132,23 +139,24 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" href="inicio">Inicio <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="inicio"><i class="fa fa-bars mr-2"> {% load static %} <img src="{% static '/assets/icons/Group271.svg' %}">
+              </i><span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="logout" onclick="confirmar_logout()">Cerrar Sesion</a>
-            </li>
-            <!-- <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              Desplegable
+            </li> -->
+            <li class="nav-item dropdown">
+              <a class="nav-link " href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars mr-2"> {% load static %} <img src="{% static '/assets/icons/Group269.svg' %}">
+              </i>
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Gestionar Usuario</a>
+              <!-- <a class="dropdown-item" href="#">Another action</a> -->
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="logout" onclick="confirmar_logout()">Cerrar Sesion</a>
             </div>
-          </li> -->
+          </li>
         </ul>
       </div>
     </nav>
@@ -212,7 +220,9 @@
       {% block listado_productos %}
       
       {% endblock listado_productos %}
-      
+
+      <!-- VENTAS -->
+
       {% block ventas %}
       
       {% endblock ventas %}
@@ -228,6 +238,12 @@
       {% block pedidos %}
 
       {% endblock pedidos %}
+
+      <!-- CLIENTES  -->
+
+      {% block clientes %}
+
+      {% endblock clientes %}
       
     </div>
     
