--- a/templatedjango/apptemplate/templates/compras/compras.html
+++ b/templatedjango/apptemplate/templates/compras/compras.html
@@ -7,7 +7,7 @@
 {% block compras %}
 <div class="container rounded">
 
-  <div class="row" style="margin-top: 100px;">
+  <div class="row">
 
     <div class="col-sm-12 col-md-12 col-lg-12 col-xl-4">
 
