--- a/templatedjango/apptemplate/templates/insumos/insumos.html
+++ b/templatedjango/apptemplate/templates/insumos/insumos.html
@@ -8,7 +8,7 @@
 
 <div class="container rounded">
 
-    <div class="row" style="margin-top: 100px;">
+    <div class="row">
 
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-4">
 
