--- a/templatedjango/apptemplate/templates/produccion/produccion.html
+++ b/templatedjango/apptemplate/templates/produccion/produccion.html
@@ -321,7 +321,7 @@
                         </div>
 
                         <div class="form-group">
-                            <input type="number" class="form-control" name="cantidad" placeholder="Cantidad a Usar" disabled>
+                            <input type="number" class="form-control" name="cantidad" placeholder="Cantidad Insumo" disabled>
                         </div>
 
                         <div class="form-group">
