--- a/templatedjango/apptemplate/templates/compras/listado_compras.html
+++ b/templatedjango/apptemplate/templates/compras/listado_compras.html
@@ -3,9 +3,13 @@
 
 {% block listado_compras %}
 
+{% block titulo_listado_compras %}
+<title>Listado Compras</title>
+{% endblock titulo_listado_compras %}
+
 <div class="container rounded">
 
-    <div class="row" style="margin-top: 100px; align-items: center; display: flex; justify-content: center;">
+    <div class="row" style="align-items: center; display: flex; justify-content: center;">
         <!-- este style es para centar el div de la clase col -->
 
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-8 card shadow p-3 mb-5 bg-white rounded" style="border:none;">
