--- a/templatedjango/apptemplate/templates/insumos/insumos.html
+++ b/templatedjango/apptemplate/templates/insumos/insumos.html
@@ -26,7 +26,7 @@
                         <div class="form-group">
 
                             <div class="form-group">
-                                <select class="form-control selectpicker" name="categoria" title="Selecione una categoría" >
+                                <select class="form-control selectpicker" name="categoria" title="Selecione una categoría" required>
 
                                     {% for categorias in categoria  %}
                                     <option option id="opcion{{categorias.id}}" value="{{categorias.id}}">{{categorias.Nombre}}</option>
@@ -43,7 +43,7 @@
 
                             <div class="form-group">
 
-                                <input type="number" class="form-control" name="cantidad" placeholder="Cantidad" required>
+                                <input type="number" class="form-control" name="cantidad" placeholder="Cantidad" min="0" required>
 
                             </div>
 
@@ -267,5 +267,6 @@
 
    
 </div>
+
 
 {% endblock insumos%}
