--- a/templatedjango/apptemplate/templates/productos/productos.html
+++ b/templatedjango/apptemplate/templates/productos/productos.html
@@ -2,6 +2,10 @@
 
 {% block productos%}
 
+{% block titulo_productos %}
+<title>Productos</title>
+{% endblock titulo_productos %}
+
 <div class="container rounded">
 
     <div class="row" style="margin-top: 100px; align-items: center; display: flex; justify-content: center;">
