Agregando detalles a la vista de compras, listado_pedidos y ventas

--- a/templatedjango/apptemplate/templates/base/template.html
+++ b/templatedjango/apptemplate/templates/base/template.html
@@ -71,12 +71,12 @@
         
         <a href="produccion" class="list-group-item list-group-item-action bg-light">
           <i class="fa fa-bars mr-2"> {% load static %} <img src="{% static '/assets/icons/Path_406.svg' %}">
-          </i><small class="text-uppercase font-weight-bold" style="color: #A3A6B4;">Produccion</small>
+          </i><small class="text-uppercase font-weight-bold" style="color: #A3A6B4;">Producción</small>
         </a>
         
         <a href="listado_produccion" onclick="verificar()" class="list-group-item list-group-item-action bg-light">
           <i class="fa fa-bars mr-2"> {% load static %} <img src="{% static '/assets/icons/XMLID_1973_.svg' %}">
-          </i><small class="text-uppercase font-weight-bold" style="color: #A3A6B4;">Listado Produccion</small>
+          </i><small class="text-uppercase font-weight-bold" style="color: #A3A6B4;">Listado Producción</small>
         </a>
         
         <!-- <a href="ver_compras" class="list-group-item list-group-item-action bg-light">
