--- a/templatedjango/apptemplate/templates/compras/compras.html
+++ b/templatedjango/apptemplate/templates/compras/compras.html
@@ -311,7 +311,7 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cancelar</button>
-                  <button type="submit" class="btn btn-outline-success">Registrar</button>
+                  <button type="submit" class="btn btn-outline-success">Confirmar</button>
                 </div>
               </div>
             </div>
@@ -332,7 +332,7 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cancelar</button>
-                  <button type="submit" class="btn btn-outline-success">Registrar</button>
+                  <button type="submit" class="btn btn-outline-success">Confirmar</button>
                 </div>
               </div>
             </div>
