--- a/templatedjango/apptemplate/templates/pedidos/listado_pedidos.html
+++ b/templatedjango/apptemplate/templates/pedidos/listado_pedidos.html
@@ -196,8 +196,7 @@
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-outline-danger"
                                                 data-dismiss="modal">Cancelar</button>
-                                            <button type="submit" class="btn btn-outline-success">Guardar
-                                                Cambios</button>
+                                            <button type="submit" class="btn btn-outline-success">Finalizar Pedido</button>
                                         </div>
                                     </div>
                                 </div>
